Fix multi-column format spacing issues

--- a/gplus.css
+++ b/gplus.css
@@ -1,4 +1,4 @@
-/* Expand content div */
+/* Expand content div to fill window */
 .OT {
   width: 95% !important;
 }
@@ -11,6 +11,9 @@
   margin-left: -20px !important;
   float: left !important;
 }
+.DAa { /* Shadow */
+  display: none !important;
+}
 
 /* Move circle list to bottom */
 .PK {
@@ -20,15 +23,15 @@
   bottom: 0px !important;
   height: 50px !important;
 }
-.OK, .OQ {
+.OK, .OQ { /* Position next to new post box */
   padding-left: 600px !important;
 }
-.kv, .Ny {
+.kv, .Ny { /* Keep grey bar color */
   background: none !important;
 }
 
 /* Post content */
-.FE { /* Name + Date */
+.FE { /* Name + Date line */
   padding: 2px 2px 0 2px !important;
     background: #ddd !important;
 }
@@ -70,7 +73,15 @@
   padding: 0 10px 0 0 !important;
 }
 
-/* Hide right bar */
+/* Hide right bar (friend suggestions, etc) */
 .ksa {
   display: none !important;
+}
+
+/* Pause button */
+.pausebutton {
+  position: fixed;
+  z-index: 50;
+  top: 10px;
+  right: 400px;
 }
